Fix: horizontal scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 
 body {
   height: 100%;
+  overflow-x: hidden;
 }
  
  .italic {
